--- a/index.html
+++ b/index.html
@@ -710,15 +710,55 @@
 
 
 <!-- ====== EDUCATION / ACADEMICS SECTION (Insert after Hero or Before Aerospace) ====== -->
-<section id="education" class="section" style="background: #F0F8FF;"> <!-- Light blue/teal background -->
-  <div class="max-w-7xl mx-auto" style="padding: 48px 0;">
-    <h2 class="orbitron text-4xl font-bold text-center mb-12" style="color: #183B6C; font-family: 'Orbitron', monospace;"> <!-- Dark blue title -->
+<!-- ====== EDUCATION / ACADEMICS SECTION (Insert after Hero or Before Aerospace) ====== -->
+<section id="education" class="section interests-bg">
+  <div class="max-w-7xl mx-auto">
+    <h2 class="orbitron text-4xl font-bold text-center mb-12">
       <span class="status-indicator status-active"></span>ACADEMICS
     </h2>
 
-  
+    <!-- Degrees Sub-Section -->
+    <h3 class="orbitron text-2xl font-bold text-center mb-8 text-accent-cyan">Degrees Received</h3>
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-16">
+      <!-- Degree 1: Nepal Engineering College (or Your Primary College) -->
+      <div class="project-card">
+        <div class="hud-corner tl"></div>
+        <div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div>
+        <div class="hud-corner br"></div>
+        <div class="flex items-center justify-between mb-4">
+          <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College Logo" class="w-16 h-16 object-cover rounded"> <!-- Circular logo on left -->
+          <p class="text-sm muted">2016 - 2020</p> <!-- Dates on right -->
+        </div>
+        <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">B.Tech. in Computer Engineering</h4> <!-- Degree bold -->
+        <ul class="space-y-2 mb-4 text-sm">
+          <li><span class="text-warning-amber">⚡</span> Studied core software engineering subjects like DS, Algorithms, DBMS, OS, CA, AI etc.</li>
+          <li><span class="text-warning-amber">⚡</span> Completed advanced courses in Deep Learning, Data Science, Cloud Computing and Full Stack Development.</li>
+          <li><span class="text-warning-amber">⚡</span> Received the Merit cum Means Scholarship given to top 10% of students in college and an award from the respected director for consistently best performance in academics.</li>
+        </ul>
+        <a href="https://nec.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
+      </div>
 
-      
+      <!-- Degree 2: Paschimanchal Campus (or Your Second College) -->
+      <div class="project-card hologram">
+        <div class="hud-corner tl"></div>
+        <div class="hud-corner tr"></div>
+        <div class="hud-corner bl"></div>
+        <div class="hud-corner br"></div>
+        <div class="flex items-center justify-between mb-4">
+          <img src="./assets/education/paschimanchal_logo.png" alt="Paschimanchal Campus Logo" class="w-16 h-16 object-cover rounded"> <!-- Circular logo on left -->
+          <p class="text-sm muted">2022 – Present</p> <!-- Dates on right -->
+        </div>
+        <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">B.E. in Electrical Engineering</h4> <!-- Degree bold -->
+        <ul class="space-y-2 mb-4 text-sm">
+          <li><span class="text-warning-amber">⚡</span> Focused on power systems, control systems, and automation with coursework in Power Electronics, Control Systems, Electrical Machines, and Renewable Energy.</li>
+          <li><span class="text-warning-amber">⚡</span> Served as Research Assistant, guiding undergrad projects and supervising lab sessions on circuit design.</li>
+          <li><span class="text-warning-amber">⚡</span> Co-authored papers on renewable energy systems and received recognition for academic excellence.</li>
+        </ul>
+        <a href="https://paschimanchal.tu.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
+      </div>
+    </div>
+    
     <!-- Certifications Sub-Section (2x3 Grid) -->
     <h3 class="orbitron text-2xl font-bold text-center mb-8 text-accent-cyan">Certifications</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
@@ -5014,6 +5054,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
