--- a/index.html
+++ b/index.html
@@ -728,36 +728,37 @@
         <div class="hud-corner br"></div>
         <div class="flex items-center justify-between mb-4">
           <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College Logo" class="w-16 h-16 object-cover rounded"> <!-- Circular logo on left -->
-          <p class="text-sm muted">2016 - 2020</p> <!-- Dates on right -->
+          <p class="text-sm muted">2022-Present </p> <!-- Dates on right -->
         </div>
         <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">B.Tech. in Computer Engineering</h4> <!-- Degree bold -->
         <ul class="space-y-2 mb-4 text-sm">
-          <li><span class="text-warning-amber">⚡</span> Studied core software engineering subjects like DS, Algorithms, DBMS, OS, CA, AI etc.</li>
-          <li><span class="text-warning-amber">⚡</span> Completed advanced courses in Deep Learning, Data Science, Cloud Computing and Full Stack Development.</li>
-          <li><span class="text-warning-amber">⚡</span> Received the Merit cum Means Scholarship given to top 10% of students in college and an award from the respected director for consistently best performance in academics.</li>
-        </ul>
-        <a href="https://nec.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
+  <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">IOE Merit Based Scholarship </h4>          
+           <ul class="space-y-2 mb-4 text-sm">
+          <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">Pashchimanchal Campus</h4>
+          <a href="https://nec.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
       </div>
 
       <!-- Degree 2: Paschimanchal Campus (or Your Second College) -->
-      <div class="project-card hologram">
+    <h3 class="orbitron text-2xl font-bold text-center mb-8 text-accent-cyan">Degrees Received</h3>
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-16">
+      <!-- Degree 1: Nepal Engineering College (or Your Primary College) -->
+      <div class="project-card">
         <div class="hud-corner tl"></div>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
         <div class="flex items-center justify-between mb-4">
-          <img src="./assets/education/paschimanchal_logo.png" alt="Paschimanchal Campus Logo" class="w-16 h-16 object-cover rounded"> <!-- Circular logo on left -->
-          <p class="text-sm muted">2022 – Present</p> <!-- Dates on right -->
+          <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College Logo" class="w-16 h-16 object-cover rounded"> <!-- Circular logo on left -->
+          <p class="text-sm muted">2020-2022 </p> <!-- Dates on right -->
         </div>
-        <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">B.E. in Electrical Engineering</h4> <!-- Degree bold -->
+        <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">Higher Secondary Level</h4> <!-- Degree bold -->
         <ul class="space-y-2 mb-4 text-sm">
-          <li><span class="text-warning-amber">⚡</span> Focused on power systems, control systems, and automation with coursework in Power Electronics, Control Systems, Electrical Machines, and Renewable Energy.</li>
-          <li><span class="text-warning-amber">⚡</span> Served as Research Assistant, guiding undergrad projects and supervising lab sessions on circuit design.</li>
-          <li><span class="text-warning-amber">⚡</span> Co-authored papers on renewable energy systems and received recognition for academic excellence.</li>
-        </ul>
-        <a href="https://paschimanchal.tu.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
+  <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan"> Academeic Excellence Scholarship </h4>          
+           <ul class="space-y-2 mb-4 text-sm">
+          <h4 class="orbitron text-xl font-bold mb-4 text-accent-cyan">SOS Hermann Gmeriner Higher Secondary School</h4>
+          <a href="https://nec.edu.np/" target="_blank" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Visit Website</a>
       </div>
-    </div>
+  
     
     <!-- Certifications Sub-Section (2x3 Grid) -->
     <h3 class="orbitron text-2xl font-bold text-center mb-8 text-accent-cyan">Certifications</h3>
@@ -5054,6 +5055,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
