--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
       <!-- Bachelor's Degree -->
       <div class="project-card">
         <div class="degree-left">
-          <img src="./assets/education/nec_logo.png" alt="Nepal Engineering College" class="degree-logo">
+          <img src="./graphics/ioelogo.png" alt="WRC Logo" class="degree-logo">
           <p class="degree-period">2022 - Present</p>
         </div>
         <div class="degree-right">
@@ -729,7 +729,7 @@
       <!-- Higher Secondary -->
       <div class="project-card">
         <div class="degree-left">
-          <img src="./assets/education/sos_logo.png" alt="SOS Hermann Gmeiner" class="degree-logo">
+          <img src="./graphics/soslogo.jpg" alt="SOS Hermann Gmeiner" class="degree-logo">
           <p class="degree-period">2020 - 2022</p>
         </div>
         <div class="degree-right">
@@ -746,7 +746,7 @@
       <div class="certifications-grid">
         <div class="cert-card">
           <div class="cert-top cert-top--stanford">
-            <img src="./assets/education/stanford_logo.png" alt="Stanford" class="cert-logo">
+            <img src="./graphics/stanfordlogo.png" alt="Stanford" class="cert-logo">
           </div>
           <div class="cert-bottom">
             <h4 class="cert-title">Machine Learning</h4>
@@ -5285,6 +5285,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
